--- a/_sass/_layout/_page.scss
+++ b/_sass/_layout/_page.scss
@@ -3,6 +3,7 @@
  */
 .page-content {
     padding: 0;
+    margin-top: 50px;
 }
 
 .page-heading {
